update fro all programs

--- a/README
+++ b/README
@@ -2,4 +2,6 @@ README
 MA-305-A Scientific Computing
 10 March 2022 Midterm
 
-Bisection program to calculate pi to 15 decimal places.
+A bisection program to calculate pi to 15 decimal places.
+A program to compute e.
+A program to perform gaussian elimination on a matrix from a file.
